--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version ="1.0" ?>
-<project name="Dmas" default ="jar" basedir =".">
+<project name="Damas" default ="jar" basedir =".">
 <description >
 Damas
 </description >
@@ -9,7 +9,7 @@ Damas
 <property name="dist" location ="dist" />
 <property name="javadoc" location ="javadoc" />
 <!-- nombre para el jar -->
-<property name="nameDist" location ="MyApp" />
+<property name="nameDist" location ="Damas" />
 <target name="init" >
 <!-- generamos un timestamp -->
 <tstamp />
@@ -22,15 +22,15 @@ Damas
 </target >
 <target name="runClass" depends ="compile" description ="compile the source" >
 <!-- Compilando el código en ${src} a ${build} -->
-<java classname ="src.tienda.Principal" classpath ="${build}" />
+<java classname ="src.Menu.main" classpath ="${build}" />
 </target >
 <target name="jar" depends ="compile" description ="Generando el directori dist para almacenar el Jar " >
 <!-- Creamos el directorio dist/lib -->
 <mkdir dir="${dist}/lib" />
 <!-- Agregamos todo lo que hay en ${build} en ${nameDist}-${DSTAMP}.jar -->
-<jar jarfile ="${dist}/lib/MyApp-${DSTAMP}.jar" basedir ="${build}" >
+<jar jarfile ="${dist}/lib/Damas.jar" basedir ="${build}" >
 <manifest >
-<attribute name="Main-Class" value ="src/tienda/Principal" />
+<attribute name="main" value ="src/Menu/main" />
 </manifest >
 </jar>
 </target >
